--- a/ComponentUtil.Common/ComponentUtil.Common.csproj
+++ b/ComponentUtil.Common/ComponentUtil.Common.csproj
@@ -2,6 +2,22 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <Version>0.1.0</Version>
+        <Company>https://blog.imguan.com</Company>
+        <Authors>Removable</Authors>
+        <Description>一些常用的工具类方法</Description>
+        <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+        <PackageProjectUrl>https://github.com/Removable/ComponentUtil</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/Removable/ComponentUtil</RepositoryUrl>
     </PropertyGroup>
+
+    <ItemGroup>
+      <None Include="C:\Users\me\Desktop\LICENSE.txt">
+        <Pack>True</Pack>
+        <PackagePath></PackagePath>
+      </None>
+    </ItemGroup>
 
 </Project>
