--- a/ComponentUtil.Webs/ComponentUtil.Webs.csproj
+++ b/ComponentUtil.Webs/ComponentUtil.Webs.csproj
@@ -8,6 +8,12 @@
         <Description>项目部分代码来自https://github.com/dotnetcore/Util</Description>
         <PackageLicenseExpression></PackageLicenseExpression>
         <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+        <PackageProjectUrl>https://github.com/Removable/ComponentUtil</PackageProjectUrl>
+        <RepositoryType></RepositoryType>
+        <RepositoryUrl>https://github.com/Removable/ComponentUtil</RepositoryUrl>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <PackageId>ComponentUtil.Webs</PackageId>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <ItemGroup>
