--- a/ComponentUtil.Common/ComponentUtil.Common.csproj
+++ b/ComponentUtil.Common/ComponentUtil.Common.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-        <Version>0.3.9</Version>
+        <Version>0.4.0</Version>
         <Company>https://blog.imguan.com</Company>
         <Authors>Removable</Authors>
         <Description>一些常用的工具类方法</Description>
@@ -11,8 +11,8 @@
         <PackageProjectUrl>https://github.com/Removable/ComponentUtil</PackageProjectUrl>
         <RepositoryUrl>https://github.com/Removable/ComponentUtil</RepositoryUrl>
         <LangVersion>9</LangVersion>
-        <PackageVersion>0.3.9</PackageVersion>
-        <TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
+        <PackageVersion>0.4.0</PackageVersion>
+        <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
